--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,5 @@
+@import "vue3-toastify/dist/index.css";
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
